5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4466/executions/1670_2972.log
== SUBMITION (2019-04-16 18:54:14) 
-- CODE:
posicao=int(input("posicao  "))
velocidade=int(input("velocidade  "))
deslocamento=int(input("deslocamento  "))
x=posicao+velocidade+deslocamento
a=1000
if(x>a):
	  print(x)
	  print("sim")
else:
	print(x)
	print("nao")
-- EXECUTION TIME:
0.22413
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
147
nao
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
149
nao
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
70
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:54:39) 
-- CODE:
posicao=int(input("posicao  "))
velocidade=int(input("velocidade  "))
deslocamento=int(input("deslocamento  "))
x=posicao+velocidade+deslocamento
a=1000
if(x>a):
	  print(x)
print("sim")
else:
	print(x)
	print("nao")
-- EXECUTION TIME:
0.146203
-- ERROR:
  File "/home/codebench/codes/1670/2972/main.py", line 9
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:54:47) 
-- CODE:
posicao=int(input("posicao  "))
velocidade=int(input("velocidade  "))
deslocamento=int(input("deslocamento  "))
x=posicao+velocidade+deslocamento
a=1000
if(x>a):
	   print(x)
      print("sim")
else:
	print(x)
	print("nao")
-- EXECUTION TIME:
0.176865
-- ERROR:
  File "/home/codebench/codes/1670/2972/main.py", line 8
    print("sim")
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:54:55) 
-- CODE:
posicao=int(input("posicao  "))
velocidade=int(input("velocidade  "))
deslocamento=int(input("deslocamento  "))
x=posicao+velocidade+deslocamento
a=1000
if(x>a):
	   print(x)
      print("sim")
else:
	   print(x)
	   print("nao")
-- EXECUTION TIME:
0.152866
-- ERROR:
  File "/home/codebench/codes/1670/2972/main.py", line 8
    print("sim")
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:54:56) 
-- CODE:
posicao=int(input("posicao  "))
velocidade=int(input("velocidade  "))
deslocamento=int(input("deslocamento  "))
x=posicao+velocidade+deslocamento
a=1000
if(x>a):
	   print(x)
      print("sim")
else:
	   print(x)
	   print("nao")
-- EXECUTION TIME:
0.147046
-- ERROR:
  File "/home/codebench/codes/1670/2972/main.py", line 8
    print("sim")
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:54:56) 
-- CODE:
posicao=int(input("posicao  "))
velocidade=int(input("velocidade  "))
deslocamento=int(input("deslocamento  "))
x=posicao+velocidade+deslocamento
a=1000
if(x>a):
	   print(x)
      print("sim")
else:
	   print(x)
	   print("nao")
-- EXECUTION TIME:
0.200965
-- ERROR:
  File "/home/codebench/codes/1670/2972/main.py", line 8
    print("sim")
               ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
